add gender enum

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,14 +7,14 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "RefreshSecret": "web-api-mothership-super-secret-secret-key",
-    "Secret": "web-api-mothership-super-secret-key",
+    "RefreshSecret": "JVxbkGIdzfaGgbNj",
+    "Secret": "VNsWHMwtddPnTEtg",
     "Issuer": "WebApiMothership",
     "Audience": "WebApiMothership",
     "ExpiryMinutes": 60,
     "RefreshExpiryMinutes": 10080 
   },
   "ConnectionStrings": {
-    "AppDb": "Data Source=.;Initial Catalog=SampleApp;Integrated Security=True"
+    "AppDb": "Data Source=.;Initial Catalog=IELTSPractice;Integrated Security=True"
   }
 }
