--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -6,14 +6,14 @@
     }
   },
   "JwtSettings": {
-    "RefreshSecret": "web-api-mothership-super-secret-secret-key",
-    "Secret": "web-api-mothership-super-secret-key",
+    "RefreshSecret": "super-secret-secret-key",
+    "Secret": "super-secret-key",
     "Issuer": "WebApiMothership",
     "Audience": "WebApiMothership",
     "ExpiryMinutes": 60,
     "RefreshExpiryMinutes": 10080
   },
   "ConnectionStrings": {
-    "AppDb": "Data Source=.;Initial Catalog=SampleApp;Integrated Security=True"
+    "AppDb": "Data Source=.;Initial Catalog=IELTSPractice;Integrated Security=True"
   }
 }
