add upload server

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -15,5 +15,10 @@
   },
   "ConnectionStrings": {
     "AppDb": "Data Source=.;Initial Catalog=IELTSPractice;Integrated Security=True"
+  },
+  "CloudinarySettings": {
+    "CloudName": "monarchz",
+    "ApiKey": "158388936842612",
+    "ApiSecret": "2n5v9MIWDbO9VnvQTa432lJZORE"
   }
 }
