--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -12,9 +12,14 @@
     "Issuer": "WebApiMothership",
     "Audience": "WebApiMothership",
     "ExpiryMinutes": 1,
-    "RefreshExpiryMinutes": 10080 
+    "RefreshExpiryMinutes": 10080
   },
   "ConnectionStrings": {
     "AppDb": "Data Source=.;Initial Catalog=IELTSPractice;Integrated Security=True"
+  },
+  "CloudinarySettings": {
+    "CloudName": "monarchz",
+    "ApiKey": "158388936842612",
+    "ApiSecret": "2n5v9MIWDbO9VnvQTa432lJZORE"
   }
 }
