--- a/EFCore/EFCore.csproj
+++ b/EFCore/EFCore.csproj
@@ -16,4 +16,10 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Seed\Attachments.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
