--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -14,7 +14,7 @@
     "RefreshExpiryMinutes": 10080
   },
   "ConnectionStrings": {
-    "AppDb": "Data Source=.;Initial Catalog=IELTSPractice;User ID=sa;Password=123"
+    "AppDb": "Data Source=.;Initial Catalog=IELTSPractice;User ID=sa;Password=a13TZSQ7RO9W"
   },
   "CloudinarySettings": {
     "CloudName": "monarchz",
