--- a/EFCore/EFCore.csproj
+++ b/EFCore/EFCore.csproj
@@ -20,6 +20,12 @@
       <None Update="Seed\Attachments.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Seed\Managers.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Seed\Users.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
